# cnb-rs

./: .cnb.yml  .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml  install.ps1  install.sh  lefthook.yml  rustfmt.toml
.cargo/: config.toml
.cnb/: web_trigger.yml
.cnb/docker/: rust-ci.Dockerfile  rust-cross.Dockerfile
.cnb/scripts/: auto-create-tag.sh  build-image.sh  build-target.sh  ci-check.sh  generate-changelog.sh  prepare-release.sh  release-common.sh  release-issue-checklist.sh
.cnb/skills/cnb-rs-docs/: SKILL.md
.cnb/workflows/: auto-tag.yml  automerge.yml  build-image.yml  ci-check.yml  deploy-docs.yml  pre-release-check.yml  release-issue-checklist.yml  release-prepare.yml  release.yml  sync-github-main.yml  test-macos.yml
.github/workflows/: build.yml  clippy.yml  coverage.yml  linux-deb.yml  linux-rpm.yml  manual-update-package-repos.yml  rustfmt.yml  windows-msi.yml  windows-msixbundle.yml
crates/cnb-api/: Cargo.toml
crates/cnb-api/src/: client.rs  error.rs
crates/cnb-api/src/client/: ai.rs  badge.rs  build.rs  commit.rs  gpg_key.rs  group.rs  issue.rs  knowledge.rs  label.rs  member.rs  mission.rs  mod.rs  registry.rs  release.rs  repo.rs  star.rs  user.rs  workspace.rs
crates/cnb-api/src/types/: ai.rs  commit.rs  content.rs  group.rs  issue.rs  knowledge.rs  label.rs  member.rs  mod.rs  pull.rs  registry.rs  release.rs  repo.rs  star.rs  workspace.rs
crates/cnb-chat/: build.rs
crates/cnb-chat/src/: action.rs  curl.rs  docs.rs  prompt.rs
crates/cnb-core/: Cargo.toml
crates/cnb-core/src/: auth.rs  config.rs  context.rs  credential_store.rs  git.rs  lib.rs  upload.rs
crates/cnb-tui/: Cargo.toml
crates/cnb-tui/src/: confirm.rs  fmt.rs  lib.rs  style.rs  table.rs  terminal.rs  time.rs
docs/: .oxfmtrc.json  completion.md  download.md  info.md  issue-commands.md  oxlint.config.ts  package.json  pnpm-lock.yaml  stars.md  stats.md  tsconfig.json  version.md
docs/.vitepress/: config.ts  sidebar.ts
docs/auth/: index.md  login.md  logout.md
docs/commands/: browse.md  chat.md  completion.md  download.md  info.md  stars.md  stats.md  version.md
docs/commands/auth/: index.md  login.md  logout.md  status.md  switch.md
docs/commands/badge/: get.md  index.md  list.md  upload.md
docs/commands/commit/: asset-clean.md  asset-stats.md  asset-upload.md  index.md
docs/commands/config/: get.md  index.md  list.md  set.md
docs/commands/gpg-key/: index.md  list.md
docs/commands/group/: create.md  delete.md  index.md  list.md  member.md  quota.md  settings.md  sub-groups.md  transfer.md  update-logo.md  update.md  view.md
docs/commands/issue/: assigners.md  close.md  comment.md  create.md  download.md  edit.md  exist.md  index.md  label.md  list.md  mine.md  reopen.md  view.md
docs/commands/knowledge/: clean.md  index.md  info.md  list-models.md  query.md
docs/commands/label/: create.md  delete.md  index.md  issue-add.md  issue-clear.md  issue-list.md  issue-remove.md  issue-set.md  list.md  pull-add.md  pull-clear.md  pull-list.md  pull-remove.md  pull-set.md  update.md
docs/commands/member/: collaborator-list.md  collaborator-remove.md  collaborator-update.md  group-access-level.md  group-add.md  group-inherited.md  group-list.md  group-remove.md  group-update.md  group-user-access.md  index.md  repo-access-level.md  repo-add.md  repo-all.md  repo-inherited.md  repo-list.md  repo-remove.md  repo-update.md  repo-user-access.md
docs/commands/mission/: create.md  delete.md  index.md  list.md  set-visibility.md  view-add.md  view-get.md  view-list.md  view-set.md  view-sort.md
docs/commands/pr/: create.md  index.md  list.md  merge.md  update.md
docs/commands/pull/: create.md  index.md  list.md  merge.md  update.md
docs/commands/registry/: delete.md  index.md  list.md  package-delete.md  package-detail.md  package-list.md  set-visibility.md  tag-delete.md  tag-detail.md  tag-list.md
docs/commands/release/: asset-clean.md  asset-delete.md  asset-stats.md  asset-upload.md  create.md  delete.md  download.md  index.md  latest.md  list.md  update.md  view.md
docs/commands/repo/: archive.md  asset.md  clone.md  contributor.md  create.md  delete.md  edit.md  events.md  fork.md  index.md  list.md  pin.md  security.md  settings.md  top-contributors.md  transfer.md  unarchive.md  view.md  visibility.md
docs/commands/user/: activities.md  activity-detail.md  followers.md  following.md  index.md
docs/commands/workspace/: closed-clean.md  delete.md  detail.md  index.md  list.md  start.md  stop.md
docs/commit/: asset-clean.md  asset-stats.md  asset-upload.md  index.md
docs/gpg-key/: index.md  list.md
docs/group/: create.md  delete.md  index.md  list.md  member.md  quota.md  settings.md  sub-groups.md  transfer.md  update.md  view.md
docs/guide/: cnb.md  getting-started.md  linux-install.md  migrate-cnb-to-cnb-rs.md  release-process.md  windows-install.md
docs/knowledge/: clean.md  index.md  info.md  list-models.md  query.md
docs/label/: create.md  delete.md  index.md  issue-add.md  issue-clear.md  issue-list.md  issue-remove.md  issue-set.md  list.md  pull-add.md  pull-clear.md  pull-list.md  pull-remove.md  pull-set.md  update.md
docs/registry/: delete.md  index.md  list.md  package-delete.md  package-detail.md  package-list.md  set-visibility.md  tag-delete.md  tag-detail.md  tag-list.md
docs/release/: asset-clean.md  asset-stats.md  asset-upload.md  create.md  index.md  list.md
docs/repo/: asset.md  contributor.md  events.md  index.md  security.md  top-contributors.md
docs/user/: activities.md  activity-detail.md  followers.md  following.md  index.md
packaging/linux/scripts/: generate-completions.sh
packaging/windows/msix/: AppxManifest.xml.template
packaging/windows/scripts/: build-msi.ps1  build-msixbundle.ps1  stage-msix-content.ps1  test-msixbundle.ps1
scripts/: install.ps1  install.sh
scripts/release/: update_package_repos.py
src/: main.rs  root_help.rs
src/commands/: browse.rs  completion.rs  info.rs  mod.rs  stars.rs  stats.rs  version.rs
(+146 files in other folders)
