[package]
name = "cnb"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = [
  "crates/cnb-api",
  "crates/cnb-chat",
  "crates/cnb-core",
  "crates/cnb-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://cnb.cool/prevailna/cnb"
license = "Apache-2.0"

[workspace.dependencies]
# 内部 crate
cnb-api = { path = "crates/cnb-api" }
cnb-chat = { path = "crates/cnb-chat" }
cnb-core = { path = "crates/cnb-core" }
cnb-tui = { path = "crates/cnb-tui" }

# 外部依赖
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29.0"
dirs = "6"
futures = "0.3"
glob = "0.3"
indicatif = "0.18.4"
open = "5"
ratatui = "0.30.0"
regex-lite = "0.1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "multipart",
  "rustls",
  "stream"
] }
rpassword = "7.4.0"
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2"

[workspace.lints.clippy]
expect_used = "deny"
needless_borrow = "deny"
redundant_clone = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"

[[bin]]
name = "cnb"
path = "src/main.rs"

[[bin]]
name = "git-cnb"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
cnb-api = { workspace = true }
cnb-chat = { workspace = true }
cnb-core = { workspace = true }
cnb-tui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rustyline = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[lints]
workspace = true

[profile.release]
strip = true
lto = true
codegen-units = 1
