[package]
name = "cnb-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Unofficial CNB command-line tool built with Rust"
readme = "README.md"
homepage = "https://cnb.cool/wwvo/cnb-rs/cnb-rs"
repository.workspace = true
license.workspace = true

[package.metadata.deb]
name = "cnb-rs"
section = "utils"
priority = "optional"
maintainer = "wwvo"
depends = "$auto"
extended-description = """\
Unofficial CNB command-line tool built with Rust.

This package installs the cnb-rs CLI together with Bash, Zsh, and Fish
shell completions for Linux environments.
"""
assets = [
  [
    "target/x86_64-unknown-linux-gnu/release/cnb-rs",
    "usr/bin/cnb-rs",
    "755"
  ],
  [
    "packaging/linux/generated/bash/cnb-rs",
    "usr/share/bash-completion/completions/cnb-rs",
    "644"
  ],
  [
    "packaging/linux/generated/zsh/_cnb-rs",
    "usr/share/zsh/vendor-completions/_cnb-rs",
    "644"
  ],
  [
    "packaging/linux/generated/fish/cnb-rs.fish",
    "usr/share/fish/vendor_completions.d/cnb-rs.fish",
    "644"
  ],
  ["README.md", "usr/share/doc/cnb-rs/README.md", "644"],
  ["LICENSE", "usr/share/doc/cnb-rs/LICENSE", "644"],
]

[package.metadata.generate-rpm]
name = "cnb-rs"
summary = "Unofficial CNB command-line tool built with Rust"
url = "https://cnb.cool/wwvo/cnb-rs/cnb-rs"
license = "Apache-2.0"
release = "1"
assets = [
  { source = "target/x86_64-unknown-linux-gnu/release/cnb-rs", dest = "/usr/bin/cnb-rs", mode = "755" },
  { source = "packaging/linux/generated/bash/cnb-rs", dest = "/usr/share/bash-completion/completions/cnb-rs", mode = "644" },
  { source = "packaging/linux/generated/zsh/_cnb-rs", dest = "/usr/share/zsh/vendor-completions/_cnb-rs", mode = "644" },
  { source = "packaging/linux/generated/fish/cnb-rs.fish", dest = "/usr/share/fish/vendor_completions.d/cnb-rs.fish", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/cnb-rs/README.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/doc/cnb-rs/LICENSE", mode = "644", doc = true },
]

[workspace]
resolver = "2"
members = [
  "crates/cnb-api",
  "crates/cnb-chat",
  "crates/cnb-core",
  "crates/cnb-tui",
]

[workspace.package]
version = "0.6.2"
edition = "2024"
rust-version = "1.85"
repository = "https://cnb.cool/wwvo/cnb-rs/cnb-rs"
license = "Apache-2.0"

[workspace.dependencies]
# 内部 crate
cnb-api = { path = "crates/cnb-api" }
cnb-chat = { path = "crates/cnb-chat" }
cnb-core = { path = "crates/cnb-core" }
cnb-tui = { path = "crates/cnb-tui" }

# 外部依赖
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
crossterm = "0.29.0"
dirs = "6"
futures = "0.3"
glob = "0.3"
indicatif = "0.18.4"
open = "5"
ratatui = "0.30.0"
regex-lite = "0.1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "multipart",
  "rustls",
  "stream"
] }
rpassword = "7.4.0"
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2"
urlencoding = "2"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# pedantic 中不适用于本项目的规则
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
# 项目自定义的 deny 级别规则
expect_used = "deny"
format_push_string = "allow"
implicit_hasher = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"
too_many_lines = "allow"
uninlined_format_args = "deny"
unused_async = "allow"
unwrap_used = "deny"
wildcard_imports = "allow"

[workspace.lints.rust]
unsafe_code = "warn"

[[bin]]
name = "cnb-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
cnb-api = { workspace = true }
cnb-chat = { workspace = true }
cnb-core = { workspace = true }
cnb-tui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
indicatif = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
rpassword = { workspace = true }
rustyline = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }

[lints]
workspace = true

[profile.release]
strip = true
lto = true
codegen-units = 1
